--- a/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -10,20 +10,21 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of Mahākālī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">devīmahākālīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">lha mo nag mo chen mo'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-9"/>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
-                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
-                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
-                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
-                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <author role="translatorMain" xml:id="UT22084-091-067-1"/>
+                <consultant role="projectManager" xml:id="UT22084-091-067-2">Andreas Doctor</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-067-3">Adam Krug</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-091-067-4">Chokyi Nyima Rinpoche</consultant>
+                <editor role="reviser" xml:id="UT22084-091-067-5">Andreas Doctor</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-067-6">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-067-7">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.9 <date>2019</date>
+                <edition>v 0.1.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-067"/>
                 <date/>
             </publicationStmt>
@@ -47,25 +48,66 @@
                     <idno source-id="O1JC114941JC12851" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-18T11:49:28.981Z" user="admin">18/07/2023 11:49:28</note>
-                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:09:33.919Z" user="john">v 0.1.0</note>
-                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:09:33.919Z" user="john">3</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T09:53:08.104Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.1.1" date-time="2021-05-10T09:53:08.104Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.2" date-time="2021-05-10T09:53:36.891Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T09:53:51.865Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T14:35:41.613Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T14:35:41.613Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T14:36:18.372Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T09:40:22.242Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:40:22.242Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:10:02.085Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:10:02.085Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.8" date-time="2023-06-19T11:10:43.94Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-18T11:49:24.683Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.1.9" date-time="2023-07-18T11:49:24.683Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-12-13T10:09:33.919Z" type="text-version" status="v 0.1.0" xml:id="UT22084-091-067-8">
+                    <desc>v 0.1.0</desc>
+                </change>
+                <change who="#john" when="2019-12-13T10:09:33.919Z" type="translation-status" status="3" xml:id="UT22084-091-067-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-10T09:53:08.104Z" type="translation-status" status="2.h" xml:id="UT22084-091-067-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-10T09:53:08.104Z" type="text-version" status="0.1.1" xml:id="UT22084-091-067-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-10T09:53:36.891Z" type="text-version" status="0.1.2" xml:id="UT22084-091-067-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-10T09:53:51.865Z" type="text-version" status="0.1.3" xml:id="UT22084-091-067-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-29T14:35:41.613Z" type="translation-status" status="2.g" xml:id="UT22084-091-067-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-29T14:35:41.613Z" type="text-version" status="0.1.4" xml:id="UT22084-091-067-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-29T14:36:18.372Z" type="text-version" status="0.1.5" xml:id="UT22084-091-067-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T09:40:22.242Z" type="translation-status" status="2.f" xml:id="UT22084-091-067-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T09:40:22.242Z" type="text-version" status="0.1.6" xml:id="UT22084-091-067-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:10:02.085Z" type="translation-status" status="2.e" xml:id="UT22084-091-067-19">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:10:02.085Z" type="text-version" status="0.1.7" xml:id="UT22084-091-067-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:10:43.94Z" type="text-version" status="0.1.8" xml:id="UT22084-091-067-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-18T11:49:24.683Z" type="translation-status" status="2.d" xml:id="UT22084-091-067-22">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-18T11:49:24.683Z" type="text-version" status="0.1.9" xml:id="UT22084-091-067-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.10" xml:id="UT22084-091-067-24">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T13:57:38.836Z" type="translation-status" status="2.c" xml:id="UT22084-091-067-25">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T13:57:38.836Z" type="text-version" status="0.1.11" xml:id="UT22084-091-067-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
