--- a/translations/kangyur/placeholders/033-001_toh12-the_perfection_of_wisdom_in_eight_thousand_lines.xml
+++ b/translations/kangyur/placeholders/033-001_toh12-the_perfection_of_wisdom_in_eight_thousand_lines.xml
@@ -10,17 +10,19 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāṣṭasāhasrikāprajñāpāramitā</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa brgyad stong pa/</title>
                 <title type="otherTitle" xml:lang="zh">《般若波羅密多八千頌》</title>
-                <author role="translatorMain" ref="contributors.xml#team-21"/>
-                <author role="translatorEng" ref="contributors.xml#person-228">Greg Seton</author>
-                <consultant role="projectManager" ref="contributors.xml#person-139">Dr. John Canti</consultant>
-                <sponsor ref="sponsors.xml#sponsor-14">般若八千頌譯經護持小組</sponsor>
+                <author role="translatorMain" xml:id="UT22084-033-001-1">Padmakara Translation Group</author>
+                <author role="translatorEng" xml:id="UT22084-033-001-2">Greg Seton</author>
+                <consultant role="projectManager" xml:id="UT22084-033-001-3">John Canti</consultant>
+                <editor role="reviser" xml:id="UT22084-033-001-10">John Canti</editor>
+                <sponsor xml:id="UT22084-033-001-4">般若八千頌譯經護持小組</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-033-001"/>
                 <date/>
             </publicationStmt>
@@ -35,10 +37,27 @@
                     <idno source-id="O1JC114941JC11527" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T16:09:57.621Z" user="admin">10/06/2022 16:09:57</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-033-001-5">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-033-001-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T10:23:51.797Z" type="text-version" status="0.0.4" xml:id="UT22084-033-001-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-24T10:24:00.994Z" type="text-version" status="0.0.5" xml:id="UT22084-033-001-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T07:52:13.916Z" type="translation-status" status="2.h" xml:id="UT22084-033-001-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T07:52:13.916Z" type="text-version" status="0.0.6" xml:id="UT22084-033-001-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
