--- a/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
@@ -9,20 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshogs bdag kyi rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāgaṇapatitantranāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">tshogs kyi bdag po chen po'i rgyud/</title>
-                <author role="translatorMain" xml:id="UT22084-091-063-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-063-1">Dharmachakra Translation Committee</author>
                 <consultant role="projectManager" xml:id="UT22084-091-063-2">Andreas Doctor</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-063-3">Adam Krug</author>
                 <editor role="reviser" xml:id="UT22084-091-063-4">Ryan Conlon</editor>
                 <editor role="associateEditor" xml:id="UT22084-091-063-5">George FitzHerbert</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-063-6">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-063-28">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2023</date>
+                <edition>v 0.1.10 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-063"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +83,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-08T13:53:48.987Z" type="text-version" status="0.1.8" xml:id="UT22084-091-063-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-28T13:24:59.525Z" type="text-version" status="0.1.9" xml:id="UT22084-091-063-29">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T13:28:46.581Z" type="translation-status" status="2.b" xml:id="UT22084-091-063-30">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T13:28:46.581Z" type="text-version" status="0.1.10" xml:id="UT22084-091-063-31">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
