--- a/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
+++ b/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
@@ -17,12 +17,12 @@
                 <editor role="copyEditor" xml:id="UT22084-090-009-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2023</date>
+                <edition>v 0.0.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-090-009"/>
                 <date/>
             </publicationStmt>
@@ -91,6 +91,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-18T08:19:36.34Z" type="text-version" status="0.0.13" xml:id="UT22084-090-009-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T14:03:33.752Z" type="translation-status" status="2.c" xml:id="UT22084-090-009-25">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-31T14:03:33.752Z" type="text-version" status="0.0.14" xml:id="UT22084-090-009-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
