--- a/translations/kangyur/placeholders/034-017_toh29-the_perfection_of_wisdom_for_vajrapani.xml
+++ b/translations/kangyur/placeholders/034-017_toh29-the_perfection_of_wisdom_for_vajrapani.xml
@@ -11,10 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaprajñāpāramitā­vajrapāṇi­mahāyānasūtra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-034-017"/>
                 <date/>
             </publicationStmt>
@@ -29,9 +30,30 @@
                     <idno source-id="O1JC114941JC11548" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-11T13:28:30.435Z" user="admin">11/05/2023 13:28:30</note>    <note type="updated" update="translation-status" value="4" date-time="2023-01-20T13:11:42.802Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-20T13:11:42.802Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="" date-time="2023-05-11T13:28:26.189Z" user="line-tofte"/>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-11T13:28:26.189Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2023-01-20T13:11:42.802Z" type="translation-status" status="4" xml:id="UT22084-034-017-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-01-20T13:11:42.802Z" type="text-version" status="0.0.1" xml:id="UT22084-034-017-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:28:26.189Z" type="translation-status" status="" xml:id="UT22084-034-017-3">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-05-11T13:28:26.189Z" type="text-version" status="0.0.2" xml:id="UT22084-034-017-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-034-017-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-04T14:01:45.586Z" type="translation-status" status="4" xml:id="UT22084-034-017-6">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-04T14:01:45.586Z" type="text-version" status="0.0.4" xml:id="UT22084-034-017-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
