--- a/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
@@ -9,21 +9,22 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">mgon po nag po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahākālanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal mgon po nag po zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-091-065-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-065-1">Dharmachakra Translation Committee</author>
                 <consultant role="projectManager" xml:id="UT22084-091-065-2">Andreas Doctor</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-065-3">Adam Krug</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-065-4">Chokyi Nyima Rinpoche</consultant>
                 <editor role="reviser" xml:id="UT22084-091-065-5">Andreas Doctor</editor>
                 <editor role="projectEditor" xml:id="UT22084-091-065-6">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-065-7">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-065-34">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.11 <date>2023</date>
+                <edition>v 0.1.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-065"/>
                 <date/>
             </publicationStmt>
@@ -104,6 +105,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-08T13:55:34.479Z" type="text-version" status="0.1.11" xml:id="UT22084-091-065-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-28T12:37:31.054Z" type="text-version" status="0.1.12" xml:id="UT22084-091-065-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T07:40:20.436Z" type="translation-status" status="2.b" xml:id="UT22084-091-065-36">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T07:40:20.436Z" type="text-version" status="0.1.13" xml:id="UT22084-091-065-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
