--- a/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
+++ b/translations/kangyur/placeholders/091-067_toh670,1087-incantation_of_mahakali.xml
@@ -10,21 +10,22 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of Mahākālī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">devīmahākālīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">lha mo nag mo chen mo'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-091-067-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-067-1">Dharmachakra Translation Committee</author>
                 <consultant role="projectManager" xml:id="UT22084-091-067-2">Andreas Doctor</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-067-3">Adam Krug</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-067-4">Chokyi Nyima Rinpoche</consultant>
                 <editor role="reviser" xml:id="UT22084-091-067-5">Andreas Doctor</editor>
                 <editor role="projectEditor" xml:id="UT22084-091-067-6">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-067-7">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-067-34">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.11 <date>2023</date>
+                <edition>v 0.1.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-091-067"/>
                 <date/>
             </publicationStmt>
@@ -105,6 +106,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-08T13:57:38.836Z" type="text-version" status="0.1.11" xml:id="UT22084-091-067-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-28T12:38:46.962Z" type="text-version" status="0.1.12" xml:id="UT22084-091-067-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T07:41:21.536Z" type="translation-status" status="2.b" xml:id="UT22084-091-067-36">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T07:41:21.536Z" type="text-version" status="0.1.13" xml:id="UT22084-091-067-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
