--- a/translations/kangyur/placeholders/085-002_toh482-the_great_sovereign_of_practices_the_victory_over_the_three_worlds.xml
+++ b/translations/kangyur/placeholders/085-002_toh482-the_great_sovereign_of_practices_the_victory_over_the_three_worlds.xml
@@ -10,17 +10,18 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">trailokyavijayamahākalparāja</title>
                 <title type="otherTitle" xml:lang="zh">《普勝三界品之王》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'jig rten gsum las rnam par rgyal ba rtog pa'i rgyal po chen po/</title>
-                <author role="translatorMain" ref="contributors.xml#team-30"/>
-                <author role="translatorEng" ref="contributors.xml#person-190">Steven Weinberger</author>
-                <consultant role="projectManager" ref="contributors.xml#person-190">Steven Weinberger</consultant>
-                <sponsor ref="sponsors.xml#sponsor-23">Yi Jin &amp; Carlo Imo</sponsor>
+                <author role="translatorMain" xml:id="UT22084-085-002-1"/>
+                <author role="translatorEng" xml:id="UT22084-085-002-2">Steven Weinberger</author>
+                <consultant role="projectManager" xml:id="UT22084-085-002-3">Steven Weinberger</consultant>
+                <sponsor xml:id="UT22084-085-002-4">Yi Jin &amp; Carlo Imo</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-085-002"/>
                 <date/>
             </publicationStmt>
@@ -35,11 +36,24 @@
                     <idno source-id="O1JC114941JC12198" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:25:42.919Z" user="admin">26/07/2022 07:25:42</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:25:35.28Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-085-002-5">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:25:35.28Z" type="text-version" status="0.0.2" xml:id="UT22084-085-002-6">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-085-002-7">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T08:53:58.717Z" type="translation-status" status="" xml:id="UT22084-085-002-8">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T08:53:58.717Z" type="text-version" status="0.0.4" xml:id="UT22084-085-002-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
