--- a/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
+++ b/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
@@ -14,7 +14,7 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahālakṣmīsūtra</title>
             </titleStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-094-017"/>
             </publicationStmt>
             <sourceDesc>
@@ -47,6 +47,12 @@
                     <desc>4</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-29T14:48:18.521Z" type="text-version" status="0.0.1" xml:id="UT22084-094-017-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T10:49:31.795Z" type="translation-status" status="3" xml:id="UT22084-094-017-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T10:49:31.795Z" type="text-version" status="0.0.1" xml:id="UT22084-094-017-5">
                     <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
