--- a/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
@@ -19,12 +19,12 @@
                 <editor role="projectEditor" xml:id="UT22084-091-062-34">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.13 <date>2023</date>
+                <edition>v 0.1.14 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-062"/>
                 <date/>
             </publicationStmt>
@@ -114,6 +114,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-31T13:27:35.335Z" type="text-version" status="0.1.13" xml:id="UT22084-091-062-37">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T15:31:37.772Z" type="translation-status" status="2.a" xml:id="UT22084-091-062-38">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T15:31:37.772Z" type="text-version" status="0.1.14" xml:id="UT22084-091-062-39">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
