--- a/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-091-063-28">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.10 <date>2023</date>
+                <edition>v 0.1.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-063"/>
                 <date/>
             </publicationStmt>
@@ -92,6 +92,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-31T13:28:46.581Z" type="text-version" status="0.1.10" xml:id="UT22084-091-063-31">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T15:33:20.58Z" type="translation-status" status="2.a" xml:id="UT22084-091-063-32">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-05T15:33:20.58Z" type="text-version" status="0.1.11" xml:id="UT22084-091-063-33">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
